# soda-mmQC

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py
data/checklist/minimal-requirement-for-figure-caption/: error-bars-defined.json
data/figure/10.1038_s44318-025-00412-5/1/: 10.1038-s44318-025-00412-5Figure1.pptx
data/figure/10.1038_s44319-025-00415-7/2/: caption.txt
data/figure/10.1038_s44320-025-00096-3/9/: caption.txt
data/prompt/: error-bars-defined.txt
documents/: Assistants checks.xlsx
notebooks/: plots-doc-checklist.ipynb  plots-fig-checklist.ipynb  plots.ipynb
scripts/: run.py
soda_mmqc/: __init__.py  config.py  curation.py  evaluation.py  examples.py  model_api.py  model_cache.py
soda_mmqc/core/: __init__.py  curation.py  evaluation.py  examples.py
soda_mmqc/data/checklist/doc-checklist/section-order/: benchmark.json  schema.json
soda_mmqc/data/checklist/doc-checklist/section-order-alt/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/error-bars-defined/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/individual-data-points/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/micrograph-scale-bar/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/micrograph-symbols-defined/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/plot-axis-units/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/plot-gap-labeling/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/replicates-defined/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/stat-significance-level/: benchmark.json  schema.json
soda_mmqc/data/checklist/fig-checklist/stat-test/: benchmark.json  schema.json
soda_mmqc/data/checklist/mini/: error-bars-defined.json
soda_mmqc/data/checklist/mini/error-bars-defined/: benchmark.json  prompt.txt  (+1 more)
soda_mmqc/docs/: api_providers.md
soda_mmqc/lib/: __init__.py  api.py  cache.py
soda_mmqc/scripts/: curate.py  evaluate.py  run.py  visualize.py
soda_mmqc/tools/: benchmark_curation.py  checkzechecks.py  curation.py  evaluator.py  example_visualizer.py  promptcomp.py  requirements.txt  visualize.py
soda_mmqc/utils/: hash_utils.py
soda_mmqc/visualization/: README.md  plot_results.py  requirements.txt
tests/: __init__.py  mock_modules.py  test_anthropic_integration.py  test_compare_lists.py  test_compare_objects.py  test_compare_strings.py  test_config.py  test_curation.py  test_evaluate.py  test_fuzzy_matching.py  test_image_compression.py  test_model_api.py  test_model_api_integration.py  test_pandoc_integration.py  test_project_architecture.py  test_real_image_compression.py
tests/data/: analysis.json
tests/documents/content/: test_document.docx
(+327 files in other folders)
